--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
     </nav>
     <img id="logoTrybe" src="trybeLogo.png" alt="Logotipo da Trybe" style="width:110px;height:110px">
-
     <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
 
 
-    <aside id="coluna">
+
+    <div id="coluna">
+
         <div id="lista1">
             <h2>Lista das lições já aprendidas</h2>
             <ol id="licoes_aprendidas">
@@ -63,7 +64,7 @@
                 <li>SQL</li>
             </ul>
         </div>
-    </aside>
+    </div>
     <aside>
         <article class="lado-esquerdo">
 
