--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Lista das lições já aprendidas</h2>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
-                <li>Introdução Unix & Shell</li>
+                <li>Introdução Unix & Shell</li>1
                 <li>Conhecimento sobre Unix & Bash</li>
                 <li>Conhecimento sobre a Internet</li>
                 <li>HTML & CSS</li>
