Atualizações com inclusão do artigo e correções no posicionamento da foto e das tabelas

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <title>Project - Lessons Learned</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="container">
+  <div class="container">
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas em 3 SEMANAS de Trybe!</h1>
   </header>
-  <img id="minha_foto" src="./122074196_376365430157542_5702176073092801170_n.jpg" alt="Imagem de Gabriel" width="300px">
-  <section id="lista1">
+  <section id="foto">
+    <img id="minha_foto" src="./122074196_376365430157542_5702176073092801170_n.jpg" alt="Imagem de Gabriel" width="200px">
+  </section>
+  <section class="listas">
     <h3>Lições aprendidas durante as primeiras semanas de curso:</h3>
     <ol id="licoes_aprendidas">
       <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
@@ -26,23 +30,35 @@
       <li>Melhorando a relação com os colegas de trabalho - Uso da empatia;</li>
       <li>Experiências com os fundadores da Trybe;</li>
       <li>Como se preparar para entrevistas de emprego - Introdução;</li>
-      <li>Aprendendo como lidar com a metodologia ativa;</li>
+      <li>Aprendendo como lidar com a metodologia ativa.</li>
     </ol>
   </section>
-  <section id="lista2">
+  <section class="listas">
+    <h3>Lições que ainda desejo aprender:</h3>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Segurança da Informação e Hacking Ético;</li>
+      <li>Criptografia e Sistemas de Informação;</li>
+      <li>Aprofundamento em Química e Ciências da computação;</li>
+      <li>Tratamento e manipulação de dados;</li>
+      <li>Especialização em back-end;</li>
+      <li>Aprofundamento em front-end;</li>
+      <li>Como superar dificuldades de interação;</li>
+      <li>Desenvolver Habilidades de liderança;</li>
+      <li>História e Apologética da Igreja Católica;</li>
+      <li>Literatura Clássica e Filosofia.</li>
     </ul>
   </section>
+  <section>
+    <article id="artigo">
+      <h3>Como está sendo a experiência até o momento?</h3>
+      <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
+        <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. Méritos da Trybe, de toda a equipe. #VQV!
+      </p>
+    </article>
+  </section>
+  <footer id="rodape">
+    <p>Página compilada e estilizada por: <a href="https://twitter.com/gabrielmarkyan" target="_blank">Gabriel Markyan</a></p>
+  </footer>
   </div>
 </body>
 </html>
