Inclusão do aside, do article e dos links de navegação

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <div class="container">
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas em 3 SEMANAS de Trybe!</h1>
+    <nav id="links-nav">
+      <ul>
+        <li><a href="#foto">Início</a></li>
+        <li><a href="#licoes-aprendidas">Aprendizados</a></li>
+        <li><a href="rodape">Contato</a></li>
+      </ul>
+    </nav>
   </header>
   <section id="foto">
     <img id="minha_foto" src="./122074196_376365430157542_5702176073092801170_n.jpg" alt="Imagem de Gabriel" width="200px">
@@ -56,6 +63,10 @@
       </p>
     </article>
   </section>
+  <aside id="menu-lateral">
+    <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Mas, ao iniciar o processo seletivo, você percebe o profissionalismo e a dedicação dos gestores ao direcionar o, ainda candidato, de várias formas, para o sucesso no processo. Gratificante!"</p>
+    <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
+  </aside>
   <footer id="rodape">
     <p>Página compilada e estilizada por: <a href="https://twitter.com/gabrielmarkyan" target="_blank">Gabriel Markyan</a></p>
   </footer>
