Correções e elementos adicionais

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#foto">Início</a></li>
         <li><a href="#licoes-aprendidas">Aprendizados</a></li>
-        <li><a href="rodape">Contato</a></li>
+        <li><a href="#rodape">Contato</a></li>
       </ul>
     </nav>
   </header>
