Trybe Evaluator Feedback Bot Fixes #1

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </ol>
   </section>
   <section class="listas">
-    <h3>Lições que ainda desejo aprender:</h3>
-    <ul>
+    <h3>Sobre o que ainda desejo aprender:</h3>
+    <ul id="licoes_a_aprender">
       <li>Segurança da Informação e Hacking Ético;</li>
       <li>Criptografia e Sistemas de Informação;</li>
       <li>Aprofundamento em Química e Ciências da computação;</li>
@@ -64,7 +64,7 @@
     </article>
   </section>
   <aside id="menu-lateral">
-    <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Mas, ao iniciar o processo seletivo, você percebe o profissionalismo e a dedicação dos gestores ao direcionar o, ainda candidato, de várias formas, para o sucesso no processo. Gratificante!"</p>
+    <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Hoje já me encontro mais tranquilo." </p>
     <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
   </aside>
   <footer id="rodape">
