--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     </header>
     <main>
         <img id="minha_foto" src="layo.jpg" alt="layoFoto" />
-        <aside>
-            <p>
-              Todo dia tem sido uma luta para estilizar dentro do CSS, creio que a
-              evolução venha com a experiencia, a cada dia melhorando mais e
-              aprendendo mais sobre esse mundo do CSS.
-            </p>
-          </aside>
+        
           <section id="list">
       <ol id="licoes_aprendidas">
         <li>Linux</li>
@@ -45,7 +39,15 @@
         <li>Unit Tests</li>
       </ul>
     </section>
-      <article>
+    <div>
+    <aside class="lado-direito">
+      <p>
+        Todo dia tem sido uma luta para estilizar dentro do CSS, creio que a
+        evolução venha com a experiencia, a cada dia melhorando mais e
+        aprendendo mais sobre esse mundo do CSS.
+      </p>
+    </aside>
+      <article class="lado-esquerdo">
         <p>
           Desde que entrei na Trybe, meu aprendizado tem sido exponencial devido
           a toda evolução que tive nessas duas ultimas semanas de estudos,
@@ -54,6 +56,7 @@
           dentro da área que estou me descobrindo.
         </p>
       </article>
+    </div>
     </main>
     <nav><a id="link" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a></nav>
     <footer id="rodape"></footer>
