adiciona mais elementos semanticos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
             <h1 id="titulo">Lessons learned - Trybe</h1>
         </header>
         <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px>
-        <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
+        <nav>
+            <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
+        </nav>
+        <section>
         <ol id="licoes_aprendidas">
             <li>item</li>
             <li>item</li>
@@ -23,6 +26,8 @@
             <li>item</li>
             <li>item</li>
         </ol>
+        </section>
+        <section>
         <ul id="licoes_a_aprender">
             <li>item</li>
             <li>item</li>
@@ -35,6 +40,7 @@
             <li>item</li>
             <li>item</li>
         </ul>
+        </section>
         <article>
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </article>
