Trybe Evaluator Feedback Bot Fixes #2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
   <div class="container">
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas em 3 SEMANAS de Trybe!</h1>
@@ -25,7 +26,11 @@
   <section id="foto">
     <img id="minha_foto" src="./122074196_376365430157542_5702176073092801170_n.jpg" alt="Imagem de Gabriel" width="200px">
   </section>
-  <section class="listas">
+  <aside id="menu-lateral">
+    <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Hoje já me encontro mais tranquilo." </p>
+    <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
+  </aside>
+  <section class="lado-esquerdo">
     <h3>Lições aprendidas durante as primeiras semanas de curso:</h3>
     <ol id="licoes_aprendidas">
       <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
@@ -40,7 +45,7 @@
       <li>Aprendendo como lidar com a metodologia ativa.</li>
     </ol>
   </section>
-  <section class="listas">
+  <section class="lado-esquerdo">
     <h3>Sobre o que ainda desejo aprender:</h3>
     <ul id="licoes_a_aprender">
       <li>Segurança da Informação e Hacking Ético;</li>
@@ -56,17 +61,13 @@
     </ul>
   </section>
   <section>
-    <article id="artigo">
+    <article class="lado-direito">
       <h3>Como está sendo a experiência até o momento?</h3>
       <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
         <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. Méritos da Trybe, de toda a equipe. #VQV!
       </p>
     </article>
   </section>
-  <aside id="menu-lateral">
-    <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Hoje já me encontro mais tranquilo." </p>
-    <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
-  </aside>
   <footer id="rodape">
     <p>Página compilada e estilizada por: <a href="https://twitter.com/gabrielmarkyan" target="_blank">Gabriel Markyan</a></p>
   </footer>
