--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header id="cabecalho">
             <h1 id="titulo">Lessons learned - Trybe</h1>
         </header>
-        <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px>
+        <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px alt="Minha foto ae">
         <nav>
             <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
         </nav>
