--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
         <aside>
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </aside>
+        <table>
+            <tr>
+                <th>Nome</th>
+                <th>Sobrenome</th>
+                <th>Jogos</th>
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Valentine</td>
+                <td>1, 3 e 5</td>
+            </tr>
+            <tr>
+                <td>Chris</td>
+                <td>Redfield</td>
+                <td>1, CV, 5, 6</td>
+            </tr>
+            <tr>
+                <td>Leon</td>
+                <td>Kennedy</td>
+                <td>2, 4, 6</td>
+            </tr>
+            <tr>
+                <td>Claire</td>
+                <td>Redfield</td>
+                <td>2, CV</td>
+            </tr>
+        </table>
         <footer id="rodape">Rodapé</footer>
     </body>
 </html>
