Trybe Evaluator Feedback Bot Fixes #4 - Searching the 100%

--- a/index.html
+++ b/index.html
@@ -67,8 +67,24 @@
       </p>
     </article>
   </section>
+  <table id="tabela-ref">
+    <caption><strong>Referências Bibliográficas:</strong></caption>
+    <tr>
+      <th>Source</th>
+      <th>Link</th>
+    </tr>
+    <tr>
+      <td>HTML Tables</td>
+      <td><a href="https://www.w3schools.com/html/html_tables.asp">w3schools.com</a></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
   <footer id="rodape">
     <p>Página compilada e estilizada por: <a href="https://twitter.com/gabrielmarkyan" target="_blank">Gabriel Markyan</a></p>
+    <a href="https://www.linkedin.com/in/gabrielmedeiro5/"><img src="https://cdn.iconscout.com/icon/free/png-256/linkedin-32-114604.png" alt="Ícone da rede social LinkedIn" width="50px"></a>
+    <a href="https://github.com/markyangit"><img src="https://pngimg.com/uploads/github/github_PNG83.png" alt="Ícone do GitHub, plataforma de versionamento de projetos" width="50px"></a>
   </footer>
   </div>
 </body>
