--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <article class="lado-esquerdo">
                     <!--<h1>O que eu aprendi até aqui</h1>-->
                     <p>
+                    <h1>O que eu aprendi até aqui</h1>    
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum quam augue, sit amet imperdiet risus interdum luctus.Phasellus eu sollicitudin odio, nec vehicula nulla. Vivamus rutrum nulla non eros porttitor, sed elementum felis faucibus. 
                     </p>
                 </article>
@@ -77,6 +78,7 @@
                 <aside class="lado-direito">
                     <!-- <h1>Minha jornada como DEV</h1> -->
                     <p>
+                    <h1>Minha jornada como DEV</h1>    
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin fermentum quam augue, sit amet imperdiet risus interdum luctus.Phasellus eu sollicitudin odio, nec vehicula nulla. 
                     </p>
                 </aside>
