--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         <li>Unit Tests</li>
       </ul>
     </section>
+    <table class="knowledge">
+      <thead>
+        <tr>
+          <th class="header">Conhecimento</th>
+          <th class="header">Consolidado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Linux</td>
+          <td>70%</td>
+        </tr>
+        <tr>
+          <td>Git</td>
+          <td>80%</td>
+        </tr>
+        <tr>
+          <td>GitHub</td>
+          <td>80%</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>70%</td>
+        </tr>
+    </table>
     <div>
     <aside class="lado-direito">
       <p>
