ajustes e fonte customizada

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas - DEV</title>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -25,7 +29,7 @@
         <main>
             <section>
                 <div id="hero-card">
-                  <img id="minha_foto" src="img/hero.jpeg" alt="hero">
+                  <img id="minha_foto" src="img/hero.jpg" alt="hero">
                   <p> Lucas Silva</p>
                   <div id="card-links">
                     <ul id="card-list">
