--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                   <p> Lucas Silva</p>
                   <div id="card-links">
                     <ul id="card-list">
-                        <li><a href="https://github.com/LucasSilvaMarts" target="_blank"><img src="img/github.svg" width="30px" alt="github"></a></li>
-                        <li><a href="#"><img src="img/linkedin.svg" target="_blank" width="30px" alt="github"></a></li>
-                        <li><a href="https://twitter.com/DevSMarts" target="_blank"><img src="img/twitter.svg" width="30px" alt="github"></a></li>
+                        <li><a href="https://github.com/LucasSilvaMarts" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://twitter.com/DevSMarts" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                     </ul>
                   </div>
                 </div>
