Commit, possivelmente, final!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     <nav id="links-nav">
       <ul>
         <li><a href="#foto">Início</a></li>
-        <li><a href="#licoes-aprendidas">Aprendizados</a></li>
+        <li><a href="#licoes_aprendidas">Aprendizados</a></li>
         <li><a href="#rodape">Contato</a></li>
       </ul>
     </nav>
@@ -30,7 +30,7 @@
     <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
   </aside>
   <section class="lado-esquerdo">
-    <h2>Lições aprendidas durante as primeiras semanas de curso:</h2>
+    <h2>"Lições aprendidas durante as primeiras semanas de curso:"</h2>
     <ol id="licoes_aprendidas">
       <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
       <li>Manutenção e criação de repositórios no GitHub;</li>
@@ -44,9 +44,11 @@
       <li>Aprendendo como lidar com a metodologia ativa.</li>
     </ol>
   </section>
+  <main>
   <section class="lado-esquerdo">
-    <h3>Sobre o que ainda desejo aprender:</h3>
+    <h2>"Sobre o que ainda desejo aprender:"</h2>
     <ul id="licoes_a_aprender">
+      <br>
       <li>Segurança da Informação e Hacking Ético;</li>
       <li>Criptografia e Sistemas de Informação;</li>
       <li>Aprofundamento em Química e Ciências da computação;</li>
@@ -61,12 +63,13 @@
   </section>
   <section>
     <article class="lado-direito">
-      <h3>Como está sendo a experiência até o momento?</h3>
+      <h2>"Como está sendo a experiência até o momento?"</h2>
       <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
         <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. Méritos da Trybe, de toda a equipe. #VQV!
       </p>
     </article>
   </section>
+  </main>
   <table id="tabela-ref">
     <caption><strong>Referências Bibliográficas:</strong></caption>
     <tr>
