poe o aside ao lado direito

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <li>item</li>
         </ul>
         </section>
-        <article>
+        <article class="lado-esquerdo">
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
-        </article>
+        </article class="lado-direito">
         <aside>
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </aside>
