--- a/index.html
+++ b/index.html
@@ -6,46 +6,48 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lessons learned - Trybe</h1>
-        </header>
-        <section>
-            <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px alt="Minha foto ae">
-        </section>
-        <nav>
-            <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
-        </nav>
-        <section>
-        <ol id="licoes_aprendidas">
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-        </ol>
-        </section>
-        <section>
-        <ul id="licoes_a_aprender">
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-        </ul>
-        </section>
-        <article class="lado-esquerdo">
+        <main>
+            <header id="cabecalho">
+                <h1 id="titulo">Lessons learned - Trybe</h1>
+            </header>
+            <section>
+                <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px alt="Minha foto ae">
+            </section>
+            <nav>
+                <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
+            </nav>
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                </ol>
+                </section>
+                <section>
+                    <ul id="licoes_a_aprender">
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                    </ul>
+            </section>
+            <article class="lado-esquerdo">
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
-        </article class="lado-direito">
+            </article>
+        </main>
         <aside>
             <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </aside>
