Trying to reach the 100% #4

--- a/index.html
+++ b/index.html
@@ -29,46 +29,48 @@
     <p>"Entrar na Trybe foi uma experiência que levou consigo um pouco de receio, pois era um modelo de negócio totalmente desconhecido pra mim, e diria até arriscado. Hoje já me encontro mais tranquilo." </p>
     <em>Gabriel Markyan, integrante da Turma 09 (Nov/2020)</em>
   </aside>
-  <section class="lado-esquerdo">
-    <h2>"Lições aprendidas durante as primeiras semanas de curso:"</h2>
-    <ol id="licoes_aprendidas">
-      <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
-      <li>Manutenção e criação de repositórios no GitHub;</li>
-      <li>HTML - Propriedades e configurações de páginas;</li>
-      <li>CSS - Estilizando o HTML e trazendo mais beleza às paginas web;</li>
-      <li>Introdução à JavaScript - Uso de variáveis, Manipulação de arrays, lógica e algoritmos de computação;</li>
-      <li>Como melhorar e formar conexões com um perfil no LinkedIn;</li>
-      <li>Melhorando a relação com os colegas de trabalho - Uso da empatia;</li>
-      <li>Experiências com os fundadores da Trybe;</li>
-      <li>Como se preparar para entrevistas de emprego - Introdução;</li>
-      <li>Aprendendo como lidar com a metodologia ativa.</li>
-    </ol>
-  </section>
-  <main>
-  <section class="lado-esquerdo">
-    <h2>"Sobre o que ainda desejo aprender:"</h2>
-    <ul id="licoes_a_aprender">
-      <br>
-      <li>Segurança da Informação e Hacking Ético;</li>
-      <li>Criptografia e Sistemas de Informação;</li>
-      <li>Aprofundamento em Química e Ciências da computação;</li>
-      <li>Tratamento e manipulação de dados;</li>
-      <li>Especialização em back-end;</li>
-      <li>Aprofundamento em front-end;</li>
-      <li>Como superar dificuldades de interação;</li>
-      <li>Desenvolver Habilidades de liderança;</li>
-      <li>História e Apologética da Igreja Católica;</li>
-      <li>Literatura Clássica e Filosofia.</li>
-    </ul>
-  </section>
-  <section>
-    <article class="lado-direito">
-      <h2>"Como está sendo a experiência até o momento?"</h2>
-      <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
-        <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. Méritos da Trybe, de toda a equipe. #VQV!
-      </p>
-    </article>
-  </section>
+  <div id="section-article">
+    <section class="lado-esquerdo">
+      <h2>"Lições aprendidas durante as primeiras semanas de curso:"</h2>
+      <ol id="licoes_aprendidas">
+        <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
+        <li>Manutenção e criação de repositórios no GitHub;</li>
+        <li>HTML - Propriedades e configurações de páginas;</li>
+        <li>CSS - Estilizando o HTML e trazendo mais beleza às paginas web;</li>
+        <li>Introdução à JavaScript - Uso de variáveis, Manipulação de arrays, lógica e algoritmos de computação;</li>
+        <li>Como melhorar e formar conexões com um perfil no LinkedIn;</li>
+        <li>Melhorando a relação com os colegas de trabalho - Uso da empatia;</li>
+        <li>Experiências com os fundadores da Trybe;</li>
+        <li>Como se preparar para entrevistas de emprego - Introdução;</li>
+        <li>Aprendendo como lidar com a metodologia ativa.</li>
+      </ol>
+    </section>
+    <main>
+    <section class="lado-esquerdo">
+      <h2>"Sobre o que ainda desejo aprender:"</h2>
+      <ul id="licoes_a_aprender">
+        <br>
+        <li>Segurança da Informação e Hacking Ético;</li>
+        <li>Criptografia e Sistemas de Informação;</li>
+        <li>Aprofundamento em Química e Ciências da computação;</li>
+        <li>Tratamento e manipulação de dados;</li>
+        <li>Especialização em back-end;</li>
+        <li>Aprofundamento em front-end;</li>
+        <li>Como superar dificuldades de interação;</li>
+        <li>Desenvolver Habilidades de liderança;</li>
+        <li>História e Apologética da Igreja Católica;</li>
+        <li>Literatura Clássica e Filosofia.</li>
+      </ul>
+    </section>
+    <section>
+      <article class="lado-direito">
+        <h2>"Como está sendo a experiência até o momento?"</h2>
+        <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
+          <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. <br><br>Méritos da Trybe, de toda a equipe. #VQV!
+        </p>
+      </article>
+    </section>
+  </div>
   </main>
   <table id="tabela-ref">
     <caption><strong>Referências Bibliográficas:</strong></caption>
@@ -86,8 +88,8 @@
   </table>
   <footer id="rodape">
     <p>Página compilada e estilizada por: <a href="https://twitter.com/gabrielmarkyan" target="_blank">Gabriel Markyan</a></p>
-    <a href="https://www.linkedin.com/in/gabrielmedeiro5/"><img src="https://cdn.iconscout.com/icon/free/png-256/linkedin-32-114604.png" alt="Ícone da rede social LinkedIn" width="50px"></a>
-    <a href="https://github.com/markyangit"><img src="https://pngimg.com/uploads/github/github_PNG83.png" alt="Ícone do GitHub, plataforma de versionamento de projetos" width="50px"></a>
+    <a href="https://www.linkedin.com/in/gabrielmedeiro5/" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-256/linkedin-32-114604.png" alt="Ícone da rede social LinkedIn" width="50px"></a>
+    <a href="https://github.com/markyangit" target="_blank"><img src="https://pngimg.com/uploads/github/github_PNG83.png" alt="Ícone do GitHub, plataforma de versionamento de projetos" width="50px"></a>
   </footer>
   </div>
 </body>
