Corrige problemas semanticos da pagina

--- a/index.html
+++ b/index.html
@@ -16,74 +16,74 @@
       <h4 id="meu-nome">Jhonatan Coutinho Rangel</h4>
     </header>
     <!----------------------------------------- Seção-02: Listas de Lições ----------------------------------------------->
-    <section class="lists">
-      <h3 class="subtitle"> Lições Aprendidas: </h3>
-      <ol id="licoes_aprendidas">
-        <li> Unix; </li>
-        <li> Git; </li>
-        <li> GitHub; </li>
-        <li> Empatia; </li>
-        <li> Html; </li>
-        <li> CSS; </li>
-        <li> Slack; </li>
-        <li> Zoom; </li>
-        <li> Inspect; </li>
-        <li> HTML Semântico. </li>
-      </ol>
-    </section>
-    <!--------------------------------------------->
-    <section class="lists">
-      <h3 class="subtitle"> Lições a Aprender: </h3>
-      <ul id="licoes_a_aprender">
-        <li> JavaScript; </li>
-        <li> Algorítimos; </li>
-        <li> RTL; </li>
-        <li> DOM; </li>
-        <li> FlexBox; </li>
-        <li> Node; </li>
-        <li> HOF; </li>
-        <li> SQL; </li>
-        <li> Front-end; </li>
-        <li> React. </li>
-      </ul>
-    </section>
-    <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
-    <aside>
-      <article class="lists">
-        <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
-        <p class="lado-esquerdo">
-          Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
-        </p>
-      </article>
-    </aside>
-    <!-------------------------------------------------------------------------->
-    <aside>
-      <section class="lists secao">
+    <div id="main"> 
+      <section class="lists">
+        <h3 class="subtitle"> Lições Aprendidas: </h3>
+        <ol id="licoes_aprendidas">
+          <li> Unix; </li>
+          <li> Git; </li>
+          <li> GitHub; </li>
+          <li> Empatia; </li>
+          <li> Html; </li>
+          <li> CSS; </li>
+          <li> Slack; </li>
+          <li> Zoom; </li>
+          <li> Inspect; </li>
+          <li> HTML Semântico. </li>
+        </ol>
+      </section>
+      <!--------------------------------------------->
+      <section class="lists">
+        <h3 class="subtitle"> Lições a Aprender: </h3>
+        <ul id="licoes_a_aprender">
+          <li> JavaScript; </li>
+          <li> Algorítimos; </li>
+          <li> RTL; </li>
+          <li> DOM; </li>
+          <li> FlexBox; </li>
+          <li> Node; </li>
+          <li> HOF; </li>
+          <li> SQL; </li>
+          <li> Front-end; </li>
+          <li> React. </li>
+        </ul>
+      </section>
+      <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
+      <aside>
+        <article class="lists">
+          <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
+          <p class="lado-esquerdo">
+            Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
+          </p>
+        </article>
+      </aside>
+      <!-------------------------------------------------------------------------->
+      <section class="secao">
         <h3 id="metodologia" class="subtitle"> Metodologia de Aprendizado </h3>
         <p class="lado-direito">
           No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a seguinte postura: Estudar os conteúdos do dia seguinte já na noite do dia anterior e praticar os exercícios do dia já pela parte da manhã.
         </p>
+       </section>
+      <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
+      <section>
+        <table id="table">
+          <tr>
+            <th id="id_table"> Virtudes para Ingressar e Estudar na Trybe </th>
+          </tr>
+          <tr>
+            <td> Força de Vontade | Garra | Foco | Disciplina | Dedicação | Determinação | Empenho | Perseverânça | Sede de Conhecimento | Gosto por Novos Desafios | Interesse pela área de Tecnologia | Ser Estudioso  </td>
+          </tr>
+        </table>
       </section>
-    </aside>
-    <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
-    <section>
-      <table id="table">
-        <tr>
-          <th id="id_table"> Virtudes para Ingressar e Estudar na Trybe </th>
-        </tr>
-        <tr>
-        <td> Força de Vontade | Garra | Foco | Disciplina | Dedicação | Determinação | Empenho | Perseverânça | Sede de Conhecimento | Gosto por Novos Desafios | Interesse pela área de Tecnologia | Ser Estudioso  </td>
-      </tr>
-    </table>
-  </section><br>
-  <!--------------------------------------------- Seção-05: Link Externo ------------------------------------------------->
-  <nav>
-    <a href="https://www.betrybe.com/?utm_source=trybe.com.br" target="_blank"> Conheça mais sobre a Trybe!</a>
-  </nav>
-  <!---------------------------------------- Seção-06: Informações de Rodapé --------------------------------------------->
-  <footer id="rodape">
-    Todos os direitos reservados, Jhonatan Coutinho Rangel
-  </footer>
-  <!---------------------------------------------------------------------------------------------------------------------->
-</body>
+    </div>
+    <!--------------------------------------------- Seção-05: Link Externo ------------------------------------------------->
+    <nav>
+      <a href="https://www.betrybe.com/?utm_source=trybe.com.br" target="_blank"> Conheça mais sobre a Trybe!</a>
+    </nav>
+    <!---------------------------------------- Seção-06: Informações de Rodapé --------------------------------------------->
+    <footer id="rodape">
+      Todos os direitos reservados, Jhonatan Coutinho Rangel
+    </footer>
+    <!---------------------------------------------------------------------------------------------------------------------->
+  </body>
 </html>
